Fix PredictiveParser, start working on SPEC_GRAMMAR

--- a/cfgs/spec.cfg
+++ b/cfgs/spec.cfg
@@ -1,6 +1,7 @@
-❬GrammarRecursion❭ -> ❬Line❭n❬GrammarRecursion❭ | &
-❬Line❭ -> ❬Var❭s❬LineFactored❭
-❬LineFactored❭ -> e | ❬ProdRecursion❭
-❬ProdRecursion❭ -> ❬SyntFormRecursion❭b❬ProdRecursion❭ | &
-❬SyntFormRecursion❭ -> t❬SyntFormRecursion❭ | ❬Var❭❬SyntFormRecursion❭ | t | ❬Var❭
-❬Var❭ -> u | <❬SyntFormRecursion❭>
+❬LR❭ -> Ln❬LR❭ | &
+L -> Vs❬LF❭
+❬LF❭ -> e | ❬PR❭
+❬PR❭ -> ❬SFR❭b❬PR❭ | &
+❬SFR❭ -> t❬SFR2❭ | V❬SFR2❭
+❬SFR2❭ -> ❬SFR❭ | &
+V -> u | o❬SFR❭>c
