--- a/cfgs/spec.cfg
+++ b/cfgs/spec.cfg
@@ -1,7 +1,8 @@
-❬LR❭ -> Ln❬LR❭ | &
-L -> Vs❬LF❭
-❬LF❭ -> e | ❬PR❭
-❬PR❭ -> ❬SFR❭b❬PR❭ | &
+❬LR❭ -> Ln❬LRF❭
+❬LRF❭ -> ❬LR❭ | &
+L -> Vs❬PR❭
+❬PR❭ -> ❬SFR❭❬PFR❭ | & | e❬PFR❭
+❬PFR❭ -> b❬PR❭ | &
 ❬SFR❭ -> t❬SFR2❭ | V❬SFR2❭
 ❬SFR2❭ -> ❬SFR❭ | &
-V -> u | o❬SFR❭>c
+V -> u | o❬SFR❭c
